force-app/main/default/objects/BLN_Competitor__c/BLN_Competitor__c.object-meta.xml
<CustomObject>
    <description>FOUK-3868. This is custom object name as Competitor</description>
    <label>Competitor</label>
    <nameField>
        <displayFormat>CMP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>