force-app/main/default/objects/BLN_Competitor__c/fields/BLN_Account__c.field-meta.xml
<CustomField>
    <fullName>BLN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-3868. This is the reference field of Account.</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>BLN_Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>