force-app/main/default/objects/BLN_Competitor__c/fields/BLN_ADASTechnologyProvider__c.field-meta.xml
<CustomField>
    <fullName>BLN_ADASTechnologyProvider__c</fullName>
    <description>FOUK-7201.This is the reference field of ADAS Technology Provider.</description>
    <label>ADAS Technology Provider</label>
    <type>TextArea</type>
</CustomField>