force-app/main/default/objects/BLN_Competitor__c/fields/BLN_Aretherelocationgapscover__c.field-meta.xml
<CustomField>
    <fullName>BLN_Aretherelocationgapscover__c</fullName>
    <description>FOUK-7201.This is the reference field of &quot;Are there location gaps cover?&quot;.</description>
    <label>Are there location gaps cover?</label>
    <type>TextArea</type>
</CustomField>