force-app/main/default/objects/BLN_Competitor__c/fields/BLN_BookingAvenues__c.field-meta.xml
<CustomField>
    <fullName>BLN_BookingAvenues__c</fullName>
    <description>FOUK-7201.This is the reference field of Booking Avenues.</description>
    <label>Booking Avenues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Online Booking end to end</fullName>
            </value>
            <value>
                <fullName>Online Booking non end to end</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>In Branch</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>