force-app/main/default/objects/BLN_Competitor__c/fields/BLN_BranchPercentage__c.field-meta.xml
<CustomField>
    <fullName>BLN_BranchPercentage__c</fullName>
    <description>FOUK-7201.This is the reference field of Branch Percentage.</description>
    <label>Branch Percentage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>