force-app/main/default/objects/BLN_Competitor__c/fields/BLN_BrandAwarenessStrategy__c.field-meta.xml
<CustomField>
    <fullName>BLN_BrandAwarenessStrategy__c</fullName>
    <description>FOUK-7201.This is the reference field of Brand Awareness Strategy.</description>
    <label>Brand Awareness Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Press Releases</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Email campaign</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>