force-app/main/default/objects/BLN_Competitor__c/fields/BLN_BrandStrength__c.field-meta.xml
<CustomField>
    <fullName>BLN_BrandStrength__c</fullName>
    <description>FOUK-7201.This is the reference field of Brand Strength.</description>
    <label>Brand Strength</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top of mind</fullName>
            </value>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Preference</fullName>
            </value>
            <value>
                <fullName>Consideration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>