force-app/main/default/objects/BLN_Competitor__c/fields/BLN_BrandStrengthComments__c.field-meta.xml
<CustomField>
    <fullName>BLN_BrandStrengthComments__c</fullName>
    <description>FOUK-7201.This is the reference field of Brand Strength Comments.</description>
    <label>Brand Strength Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>