force-app/main/default/objects/BLN_Competitor__c/fields/BLN_BusinessModel__c.field-meta.xml
<CustomField>
    <fullName>BLN_BusinessModel__c</fullName>
    <description>FOUK-7201.This is the reference field of Business Model.</description>
    <label>Business Model</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>