force-app/main/default/objects/BLN_Competitor__c/fields/BLN_BusinessStrategy__c.field-meta.xml
<CustomField>
    <fullName>BLN_BusinessStrategy__c</fullName>
    <description>FOUK-7201.This is the reference field of Business Strategy.</description>
    <label>Business Strategy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>