force-app/main/default/objects/BLN_Competitor__c/fields/BLN_ClaimsHandlingamountCharged__c.field-meta.xml
<CustomField>
    <fullName>BLN_ClaimsHandlingamountCharged__c</fullName>
    <description>FOUK-7201.This is the reference field of &quot;Claims Handling-amount Charged?&quot;</description>
    <label>Claims Handling-amount Charged?</label>
    <type>TextArea</type>
</CustomField>