force-app/main/default/objects/BLN_Competitor__c/fields/BLN_Competitorsharebysegment10__c.field-meta.xml
<CustomField>
    <fullName>BLN_Competitorsharebysegment10__c</fullName>
    <description>FOUK-7201.This is the reference field of Competitor share by segment 10 (%).</description>
    <label>Competitor share by segment 10 (%)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>HGV</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Fleet</fullName>
            </value>
            <value>
                <fullName>Specials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>