force-app/main/default/objects/BLN_Competitor__c/fields/BLN_CompetitorsharebysegmentVolume1__c.field-meta.xml
<CustomField>
    <fullName>BLN_CompetitorsharebysegmentVolume1__c</fullName>
    <description>FOUK-7201.This is the reference field of Competitor share by segment Volume 1 (%)</description>
    <label>Competitor share by segment Volume 1 (%)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>