force-app/main/default/objects/BLN_Competitor__c/fields/BLN_CompetitorStrengths__c.field-meta.xml
<CustomField>
    <fullName>BLN_CompetitorStrengths__c</fullName>
    <description>FOUK-7201.This is the reference field of Competitor Strengths.</description>
    <label>Competitor Strengths</label>
    <type>TextArea</type>
</CustomField>