force-app/main/default/objects/BLN_Competitor__c/fields/BLN_CompetitorWeakness__c.field-meta.xml
<CustomField>
    <fullName>BLN_CompetitorWeakness__c</fullName>
    <description>FOUK-7201.This is the reference field of Competitor Weakness.</description>
    <label>Competitor Weakness</label>
    <type>TextArea</type>
</CustomField>