force-app/main/default/objects/BLN_Competitor__c/fields/BLN_CompetitorWebsite__c.field-meta.xml
<CustomField>
    <fullName>BLN_CompetitorWebsite__c</fullName>
    <description>FOUK-7201.This is the reference field of Competitor Website.</description>
    <label>Competitor Website</label>
    <type>Url</type>
</CustomField>