force-app/main/default/objects/BLN_Competitor__c/fields/BLN_Date__c.field-meta.xml
<CustomField>
    <fullName>BLN_Date__c</fullName>
    <description>FOUK-3868. This is the reference field of Date.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>