force-app/main/default/objects/BLN_Competitor__c/fields/BLN_ESGCredentialsandStrategy__c.field-meta.xml
<CustomField>
    <fullName>BLN_ESGCredentialsandStrategy__c</fullName>
    <description>FOUK-7201.This is the reference field of ESG Credentials and Strategy.</description>
    <label>ESG Credentials and Strategy</label>
    <type>TextArea</type>
</CustomField>