force-app/main/default/objects/BLN_Competitor__c/fields/BLN_GlassQuality__c.field-meta.xml
<CustomField>
    <fullName>BLN_GlassQuality__c</fullName>
    <description>FOUK-7201.This is the reference field of Glass Quality.</description>
    <label>Glass Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OE Quality</fullName>
            </value>
            <value>
                <fullName>EU Standard</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>