force-app/main/default/objects/BLN_Competitor__c/fields/BLN_GlassSupplyKnownIssues__c.field-meta.xml
<CustomField>
    <fullName>BLN_GlassSupplyKnownIssues__c</fullName>
    <description>FOUK-7201.This is the reference field of Glass Supply - Known Issues.</description>
    <label>Glass Supply - Known Issues</label>
    <type>TextArea</type>
</CustomField>