force-app/main/default/objects/BLN_Competitor__c/fields/BLN_HeadOfficeAddress__c.field-meta.xml
<CustomField>
    <fullName>BLN_HeadOfficeAddress__c</fullName>
    <description>FOUK-7201.This is the reference field of Head Office Address.</description>
    <label>Head Office Address</label>
    <type>Address</type>
</CustomField>