force-app/main/default/objects/BLN_Competitor__c/fields/BLN_Integrationofferings__c.field-meta.xml
<CustomField>
    <fullName>BLN_Integrationofferings__c</fullName>
    <description>FOUK-7201.This is the reference field of Integration offerings.</description>
    <label>Integration offerings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Co-Branded booking</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>