force-app/main/default/objects/BLN_Competitor__c/fields/BLN_IssuesConcerns__c.field-meta.xml
<CustomField>
    <fullName>BLN_IssuesConcerns__c</fullName>
    <description>FOUK-7201.This is the reference field of Issues/Concerns.</description>
    <label>Issues/Concerns</label>
    <type>TextArea</type>
</CustomField>