force-app/main/default/objects/BLN_Competitor__c/fields/BLN_MobilePercentage__c.field-meta.xml
<CustomField>
    <fullName>BLN_MobilePercentage__c</fullName>
    <description>FOUK-7201.This is the reference field of Mobile Percentage.</description>
    <label>Mobile Percentage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>