force-app/main/default/objects/BLN_Competitor__c/fields/BLN_NetPromoterScore__c.field-meta.xml
<CustomField>
    <fullName>BLN_NetPromoterScore__c</fullName>
    <description>FOUK-7201.This is the reference field of Net Promoter Score.</description>
    <label>Net Promoter Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>