force-app/main/default/objects/BLN_Competitor__c/fields/BLN_NetworkGoodandBadCoverageareas__c.field-meta.xml
<CustomField>
    <fullName>BLN_NetworkGoodandBadCoverageareas__c</fullName>
    <description>FOUK-7201.This is the reference field of Network- Good and Bad Coverage areas.</description>
    <label>Network- Good and Bad Coverage areas</label>
    <type>TextArea</type>
</CustomField>