force-app/main/default/objects/BLN_Competitor__c/fields/BLN_NumberofLocationsCentres__c.field-meta.xml
<CustomField>
    <fullName>BLN_NumberofLocationsCentres__c</fullName>
    <description>FOUK-7201.This is the reference field of 
Number of Locations / Centres</description>
    <label>Number of Locations / Centres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>