force-app/main/default/objects/BLN_Competitor__c/fields/BLN_NumberofSubcontractors__c.field-meta.xml
<CustomField>
    <fullName>BLN_NumberofSubcontractors__c</fullName>
    <description>FOUK-7201.This is the reference field of Number of Subcontractors.</description>
    <label>Number of Subcontractors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>