force-app/main/default/objects/BLN_Competitor__c/fields/BLN_NumberofTechnicians__c.field-meta.xml
<CustomField>
    <fullName>BLN_NumberofTechnicians__c</fullName>
    <description>FOUK-7201.This is the reference field of Number of Technicians.</description>
    <label>Number of Technicians</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>