force-app/main/default/objects/BLN_Competitor__c/fields/BLN_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BLN_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-3868. This is the reference field of Opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>