force-app/main/default/objects/BLN_Competitor__c/fields/BLN_OvertheAirADAStechnologyprovider__c.field-meta.xml
<CustomField>
    <fullName>BLN_OvertheAirADAStechnologyprovider__c</fullName>
    <description>FOUK-7201.This is the reference field of Over the Air ADAS technology provider.</description>
    <label>Over the Air ADAS technology provider</label>
    <type>TextArea</type>
</CustomField>