force-app/main/default/objects/BLN_Competitor__c/fields/BLN_Percentageofelectricvehiclesownfleet__c.field-meta.xml
<CustomField>
    <fullName>BLN_Percentageofelectricvehiclesownfleet__c</fullName>
    <description>FOUK-7201.This is the reference field of Percentage of electric vehicles own fleet.</description>
    <label>Percentage of electric vehicles ownfleet</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>