force-app/main/default/objects/BLN_Competitor__c/fields/BLN_PricingIntelligence__c.field-meta.xml
<CustomField>
    <fullName>BLN_PricingIntelligence__c</fullName>
    <description>FOUK-7201.This is the reference field of Pricing Intelligence.</description>
    <label>Pricing Intelligence</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>