force-app/main/default/objects/BLN_Competitor__c/fields/BLN_PricingModels__c.field-meta.xml
<CustomField>
    <fullName>BLN_PricingModels__c</fullName>
    <description>FOUK-7201.This is the reference field of Pricing Models.</description>
    <label>Pricing Models</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>