force-app/main/default/objects/BLN_Competitor__c/fields/BLN_PricingStrategy__c.field-meta.xml
<CustomField>
    <fullName>BLN_PricingStrategy__c</fullName>
    <description>FOUK-7201.This is the reference field of Pricing Strategy.</description>
    <label>Pricing Strategy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>