force-app/main/default/objects/BLN_Competitor__c/fields/BLN_ReferralOffering__c.field-meta.xml
<CustomField>
    <fullName>BLN_ReferralOffering__c</fullName>
    <description>FOUK-7201.This is the reference field of Referral Offering.</description>
    <label>Referral Offering</label>
    <type>TextArea</type>
</CustomField>