force-app/main/default/objects/BLN_Competitor__c/fields/BLN_Reviews__c.field-meta.xml
<CustomField>
    <fullName>BLN_Reviews__c</fullName>
    <description>FOUK-7201.This is the reference field of Reviews.</description>
    <label>Reviews</label>
    <type>TextArea</type>
</CustomField>