force-app/main/default/objects/BLN_Competitor__c/fields/BLN_Sectorsthecompetitoroperatesin__c.field-meta.xml
<CustomField>
    <fullName>BLN_Sectorsthecompetitoroperatesin__c</fullName>
    <description>FOUK-7201.This is the reference field of &quot;Sectors the competitor operates in&quot;.</description>
    <label>Sectors the competitor operates in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Fleet</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>HGV</fullName>
            </value>
            <value>
                <fullName>Specials</fullName>
            </value>
            <value>
                <fullName>Own Fleet</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>