force-app/main/default/objects/BLN_Competitor__c/fields/BLN_SharePercentage__c.field-meta.xml
<CustomField>
    <fullName>BLN_SharePercentage__c</fullName>
    <description>FOUK-3868. This is the reference field of  Share Percentage.</description>
    <label>Share Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>