force-app/main/default/objects/BLN_Competitor__c/fields/BLN_SLAs__c.field-meta.xml
<CustomField>
    <fullName>BLN_SLAs__c</fullName>
    <description>FOUK-7201.This is the reference field of SLAs.</description>
    <label>SLAs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>