force-app/main/default/objects/BLN_Competitor__c/fields/BLN_Source__c.field-meta.xml
<CustomField>
    <fullName>BLN_Source__c</fullName>
    <description>FOUK-3868.This field is the reference of Source</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>