force-app/main/default/objects/BLN_Competitor__c/fields/BLN_StandardCalibrationtechnologyprovide__c.field-meta.xml
<CustomField>
    <fullName>BLN_StandardCalibrationtechnologyprovide__c</fullName>
    <description>FOUK-7201.This is the reference field of Standard Calibration technology provider.</description>
    <label>Standard Calibration technology provider</label>
    <type>TextArea</type>
</CustomField>