force-app/main/default/objects/BLN_Competitor__c/fields/BLN_TechnicianQualification__c.field-meta.xml
<CustomField>
    <fullName>BLN_TechnicianQualification__c</fullName>
    <description>FOUK-7201.This is the reference field of Technician Qualification</description>
    <label>Technician Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IMI Level 1</fullName>
            </value>
            <value>
                <fullName>IMI Level 2</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>ADAS Certified</fullName>
            </value>
            <value>
                <fullName>Level 2 &amp; 3 working safely on Hybrid and Electric Vehicles</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>