force-app/main/default/objects/BLN_Competitor__c/fields/BLN_TrustPilotScore__c.field-meta.xml
<CustomField>
    <fullName>BLN_TrustPilotScore__c</fullName>
    <description>FOUK-7201.This is the reference field of Trust Pilot Score</description>
    <label>Trust Pilot Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>