force-app/main/default/objects/BLN_Competitor__c/fields/BLN_USPs__c.field-meta.xml
<CustomField>
    <fullName>BLN_USPs__c</fullName>
    <description>FOUK-7201.This is the reference field of USP&apos;s</description>
    <label>USP&apos;s</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>