force-app/main/default/objects/BLN_Competitor__c/fields/BLN_Volume__c.field-meta.xml
<CustomField>
    <fullName>BLN_Volume__c</fullName>
    <description>FOUK-3868. This field is the reference of Volume.</description>
    <label>Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>