force-app/main/default/objects/BLN_Competitor__c/fields/BLN_Whattechnicalsolutionsdotheyoffer__c.field-meta.xml
<CustomField>
    <fullName>BLN_Whattechnicalsolutionsdotheyoffer__c</fullName>
    <description>FOUK-7201.This is the reference field of &quot;What technical solutions do they offer?&quot;.</description>
    <label>What technical solutions do they offer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADAS</fullName>
            </value>
            <value>
                <fullName>Over the Air</fullName>
            </value>
            <value>
                <fullName>ADAS Sensor Resets</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>