force-app/main/default/objects/BLN_Competitor__c/fields/BLN_WhatVAPsdotheyoffer__c.field-meta.xml
<CustomField>
    <fullName>BLN_WhatVAPsdotheyoffer__c</fullName>
    <description>FOUK-7201.This is the reference field of What VAPs do they offer?</description>
    <label>What VAPs do they offer?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wipers</fullName>
            </value>
            <value>
                <fullName>Rain Repellent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>