force-app/main/default/objects/BLN_Competitor__c/recordTypes/BLN_Competitor.recordType-meta.xml
<RecordType>
    <fullName>BLN_Competitor</fullName>
    <active>true</active>
    <label>Competitor</label>
</RecordType>