force-app/main/default/objects/BLN_Competitor__c/recordTypes/BLN_CurrentSupplier.recordType-meta.xml
<RecordType>
    <fullName>BLN_CurrentSupplier</fullName>
    <active>true</active>
    <label>Current Supplier</label>
</RecordType>